# ai-nativebook

./: .gitattributes  .gitignore  Dockerfile  README.md  debug_qdrant.py  docusaurus.config.js  package-lock.json  package.json  requirements.txt  sidebars.js  test_urdf_debug.py  verify_implementation.py  verify_ros2_humble.py
.claude/: settings.local.json
.specify/memory/: constitution.md
blog/: 2025-12-18-welcome.md  authors.yml
chatbot/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
chatbot/docs/modules/gazebo-unity/: digital-twin.mdx  gazebo-physics.mdx  introduction.mdx
chatbot/docs/modules/isaac-ai-brain/: introduction.mdx  isaac-sim.mdx
chatbot/docs/modules/ros2/: ai-integration.mdx  summary.mdx
chatbot/docs/modules/vla/: autonomous-humanoid.mdx  cognitive-planning.mdx  introduction.mdx
chatbot/src/components/Chatbot/: Chatbot.js  Chatbot.module.css
chatbot/src/isaac-ai/: navigation.py  sim_bridge.py
chatbot/src/rag/: config.py  embeddings.py  generator.py  retriever.py  vectorstore.py
chatbot/src/rag/api/: __init__.py  main.py  models.py  routes.py
chatbot/src/vla/: __init__.py  llm_client.py
docs/: intro.md
qdrant_db/: meta.json
specs/001-ros2-book-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gazebo-unity-sim/: data-model.md  phase3_completion_summary.md  phase4_completion_summary.md  phase5_completion_summary.md  phase6_initial_completion.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: data-model.md  plan.md  spec.md  (+3 more)
(+150 files in other folders)
