[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "huggingface-hub>=0.19.0",
    "myst-parser>=0.15.0",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "pytest>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=5.4.0",
    "qdrant-client>=1.7.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.24.0",
]
